k8s/base/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
    name: open-social
spec:
    rules:
        - host: $(DOMAIN)
          http:
              paths:
                  - path: /api/?(.*)
                    pathType: Prefix
                    backend:
                        service:
                            name: backend
                            port:
                                number: 80
